Creat component Tags, modify navbar to get routes and wip on projects

--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -6,3 +6,6 @@ $primaryColor: #FFF;
 $primaryDarkColor: #CCC;
 $primaryLightColor: #AAA;
 $accentColor: red;
+$create: #4caf50;
+$delete: #f44336;
+$update: #008CBA;
