--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -16,3 +16,21 @@
   }
 }
 
+.button {
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  color: aliceblue;
+}
+.button.create {
+  background-color: $create;
+}
+.button.update {
+  background-color: $update;
+}
+.button.delete {
+  background-color: $delete;
+}
