WIP Replace Project by ProjectPreview, Create a Modal for project and tag

--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -6,7 +6,9 @@ $lightGrey: #bdbdbd;
 $primaryColor: #FFF;
 $primaryDarkColor: #CCC;
 $primaryLightColor: #AAA;
-$accentColor: red;
+$primaryText: #42b983;
+$secondaryText: black;
+$accentColor: #52ff8a;
 $create: #4caf50;
 $delete: #f44336;
 $update: #008CBA;
