--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -39,8 +39,33 @@
   background-color: $delete;
 }
 
+
+.modal-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.title{
+  color: $primaryText;
+}
+
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  padding: 20px 30px;
+  background-color: $primaryColor;
+  // Allow to center the modal
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  transition: all .3s ease;
+
+}
 .modal-mask {
-  position: fixed;
+  position: absolute;
   z-index: 9998;
   top: 0;
   left: 0;
@@ -51,33 +76,12 @@
   transition: opacity .3s ease;
 }
 
-.modal-wrapper {
-  display: table-cell;
-  vertical-align: middle;
-}
-
-.modal-container {
-  width: 300px;
-  margin: 0px auto;
-  padding: 20px 30px;
-  background-color: #fff;
-  border-radius: 2px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
-  transition: all .3s ease;
-  font-family: Helvetica, Arial, sans-serif;
-}
-
-.modal-header h3 {
-  margin-top: 0;
-  color: #42b983;
-}
-
-.modal-body {
-  margin: 20px 0;
-}
-
 .modal-default-button {
   float: right;
+}
+
+.modal-header {
+  //f
 }
 
 /*
