--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -8,7 +8,7 @@ $primaryDarkColor: #CCC;
 $primaryLightColor: #AAA;
 $primaryText: #42b983;
 $secondaryText: black;
-$accentColor: #52ff8a;
+$accentColor: #4caf50;
 $create: #4caf50;
 $delete: #f44336;
 $update: #008CBA;
