--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -28,6 +28,7 @@
   display: inline-block;
   font-size: 16px;
   color: aliceblue;
+  border-radius: 5px;
 }
 .button.create {
   background-color: $create;
