--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -43,3 +43,10 @@
 .title{
   color: $primaryText;
 }
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2px 2px;
+  width: 80%;
+}
