--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -5,6 +5,7 @@
 
 @import "./fontawesome/scss/fontawesome.scss";
 @import "./fontawesome/scss/solid.scss";
+@import "./fontawesome/scss/regular.scss";
 
 .input {
   border: 1px solid $lightGrey;
