--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -7,6 +7,10 @@
 @import "./fontawesome/scss/solid.scss";
 @import "./fontawesome/scss/regular.scss";
 
+body {
+  margin: 0;
+}
+
 .input {
   border: 1px solid $lightGrey;
   padding: 5px;
