Style again, still ugly tho

--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -1,7 +1,7 @@
 $fa-font-path: "./fontawesome/webfonts";
 $main-font: 'Roboto', sans-serif;
 
-$lightGrey: #bdbdbd;
+$lightGrey: #a0a0a0;
 
 $primaryColor: #FFF;
 $primaryDarkColor: #CCC;
