--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -47,6 +47,12 @@ body {
 
 .title{
   color: $primaryText;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  .no-margin {
+    margin: 0 0;
+  }
 }
 .input-container {
   display: flex;
@@ -54,4 +60,18 @@ body {
   align-items: center;
   padding: 2px 2px;
   width: 80%;
+}
+
+.information {
+  padding: 2px 2px;
+  text-align: center;
+  font-size: 20px;
+  .label {
+    font-weight: bold;
+  }
+}
+
+.item-container {
+  flex: 1;
+  padding: 2px 2px;
 }
