--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -4,7 +4,7 @@ $main-font: 'Roboto', sans-serif;
 $lightGrey: #a0a0a0;
 
 $primaryColor: #FFF;
-$primaryDarkColor: #CCC;
+$primaryDarkColor: #000;
 $primaryLightColor: #AAA;
 $primaryText: #42b983;
 $secondaryText: black;
