--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -31,8 +31,8 @@ body {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  color: aliceblue;
+  font-size: 20px;
+  color: $primaryColor;
   border-radius: 5px;
 }
 .button.create {
