style like jagger

--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -6,9 +6,10 @@ $lightGrey: #a0a0a0;
 $primaryColor: #FFF;
 $primaryDarkColor: #000;
 $primaryLightColor: #AAA;
-$primaryText: #42b983;
+$primaryText: black;
 $secondaryText: black;
 $accentColor: #4caf50;
 $create: #4caf50;
 $delete: #f44336;
 $update: #008CBA;
+$capri: #f7ca18;
