final touch for style

--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -5,11 +5,11 @@ $lightGrey: #a0a0a0;
 
 $primaryColor: #FFF;
 $primaryDarkColor: #000;
-$primaryLightColor: #AAA;
+$primaryLightColor: #f2f2f2;
 $primaryText: black;
-$secondaryText: black;
+$secondaryText: #FFF;
 $accentColor: #4caf50;
 $create: #4caf50;
-$delete: #f44336;
+$delete: #e74c3c;
 $update: #008CBA;
 $capri: #f7ca18;
