Last commit before release

--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -5,7 +5,7 @@ $lightGrey: #a0a0a0;
 
 $primaryColor: #FFF;
 $primaryDarkColor: #000;
-$primaryLightColor: #f2f2f2;
+$primaryLightColor: #e1e1e1;
 $primaryText: black;
 $secondaryText: #FFF;
 $accentColor: #4caf50;
